--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,7 +90,7 @@ FetchContent_Declare(
 FetchContent_Declare(
   repo-ft
   GIT_REPOSITORY https://github.com/NVIDIA/FasterTransformer.git
-  GIT_TAG v4.1-dev
+  GIT_TAG main
   GIT_SHALLOW ON
 )
 FetchContent_MakeAvailable(repo-common repo-core repo-backend repo-ft)
