Update the dev/v1.1_beta

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@
 
 cmake_minimum_required (VERSION 3.18)
 
-project(tritontransformerbackend LANGUAGES C CXX)
+project(tritonfastertransformerbackend LANGUAGES C CXX)
 
 #
 # Options
@@ -43,6 +43,8 @@ set(TRITON_COMMON_REPO_TAG "r21.02" CACHE STRING "Tag for triton-inference-serve
 if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Release)
 endif()
+
+set(BUILD_GPT "ON")
 
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake/Modules)
 
@@ -89,8 +91,8 @@ FetchContent_Declare(
 )
 FetchContent_Declare(
   repo-ft
-  GIT_REPOSITORY https://github.com/NVIDIA/FasterTransformer.git
-  GIT_TAG main
+  GIT_REPOSITORY https://github.com/NVIDIA/FasterTransformer
+  GIT_TAG dev/v5.0_beta
   GIT_SHALLOW ON
 )
 FetchContent_MakeAvailable(repo-common repo-core repo-backend repo-ft)
@@ -105,15 +107,15 @@ endif() # TRITON_ENABLE_GPU
 #
 # Shared library implementing the Triton Backend API
 #
-configure_file(src/libtriton_transformer.ldscript libtriton_transformer.ldscript COPYONLY)
+configure_file(src/libtriton_fastertransformer.ldscript libtriton_fastertransformer.ldscript COPYONLY)
 
 add_library(
-  triton-transformer-backend SHARED
-  src/libtransformer.cc
+  triton-fastertransformer-backend SHARED
+  src/libfastertransformer.cc
 )
 
 add_library(
-  TritonTransformerBackend::triton-transformer-backend ALIAS triton-transformer-backend
+  TritonFasterTransformerBackend::triton-fastertransformer-backend ALIAS triton-fastertransformer-backend
 )
 
 #find_package(CUDAToolkit REQUIRED)
@@ -127,13 +129,13 @@ add_definitions("-DCUDA11_MODE")
 
 set(CUDA_PATH ${CUDA_TOOLKIT_ROOT_DIR})
 
-target_compile_definitions(triton-transformer-backend
+target_compile_definitions(triton-fastertransformer-backend
   PUBLIC
   USE_TRITONSERVER_DATATYPE
   BUILD_GPT)
 
 target_include_directories(
-  triton-transformer-backend
+  triton-fastertransformer-backend
   PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/src
 #  ${CMAKE_CURRENT_SOURCE_DIR}/test
@@ -144,28 +146,29 @@ target_include_directories(
   )
 
 target_link_directories(
-  triton-transformer-backend
+  triton-fastertransformer-backend
   PRIVATE
   ${CUDA_PATH}/lib64
   ${MPI_Libraries}
+  /usr/local/mpi/lib
   )
 
-target_compile_features(triton-transformer-backend PRIVATE cxx_std_14)
+target_compile_features(triton-fastertransformer-backend PRIVATE cxx_std_14)
 target_compile_options(
-  triton-transformer-backend PRIVATE
+  triton-fastertransformer-backend PRIVATE
   $<$<OR:$<CXX_COMPILER_ID:Clang>,$<CXX_COMPILER_ID:AppleClang>,$<CXX_COMPILER_ID:GNU>>:
-    -Wall -Wextra -Wno-unused-parameter -Wno-type-limits -Werror>
+    -Wall -Wextra -Wno-unused-parameter -Wno-type-limits >#-Werror>
 )
 
 if(${TRITON_ENABLE_GPU})
   target_compile_definitions(
-    triton-transformer-backend
+    triton-fastertransformer-backend
     PRIVATE TRITON_ENABLE_GPU=1
   )
 endif() # TRITON_ENABLE_GPU
 
 set_target_properties(
-  triton-transformer-backend
+  triton-fastertransformer-backend
   PROPERTIES
     POSITION_INDEPENDENT_CODE ON
     OUTPUT_NAME triton_fastertransformer
@@ -173,14 +176,14 @@ set_target_properties(
     BUILD_WITH_INSTALL_RPATH TRUE
     INSTALL_RPATH_USE_LINK_PATH FALSE
     INSTALL_RPATH "$\{ORIGIN\}"
-    LINK_DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/libtriton_transformer.ldscript
-    LINK_FLAGS "-Wl,--no-as-needed,--version-script libtriton_transformer.ldscript"
+    LINK_DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/libtriton_fastertransformer.ldscript
+    LINK_FLAGS "-Wl,--no-as-needed,--version-script libtriton_fastertransformer.ldscript"
 )
 
 # Need to turn off unused-but-set-variable due to Torchvision
 # Need to turn off unknown-pragmas due to ATen OpenMP
 set_target_properties(
-  triton-transformer-backend
+  triton-fastertransformer-backend
   PROPERTIES COMPILE_FLAGS
     "-Wno-unknown-pragmas -Wno-unused-but-set-variable"
 )
@@ -191,7 +194,7 @@ FOREACH(p ${TRITON_PYTORCH_LIB_PATHS})
 ENDFOREACH(p)
 
 target_link_libraries(
-  triton-transformer-backend
+  triton-fastertransformer-backend
   PRIVATE
     triton-core-serverapi  # from repo-core
     triton-core-backendapi # from repo-core
@@ -201,32 +204,15 @@ target_link_libraries(
     ${TRITON_PYTORCH_LDFLAGS}
     ${NCCL_LIBRARIES}
     ${MPI_LIBRARIES}
-    #-ltorch
-    #-ltorch_cpu
-    #-ltorch_cuda
-    #-ltorchvision
-    #-lc10
-    #-lc10_cuda
-    #-lmkl_core
-    #-lmkl_gnu_thread
-    #-lmkl_intel_lp64
-    #-lmkl_avx2
-    #-lmkl_def
-    #-liomp5
-    #-lmkl_intel_thread
-    #-lmkl_vml_def
-    #-lmkl_rt
     -lcublas
     -lcublasLt
     -lcudart
     -lcurand
-    #-lnccl
-    #-lmpi
 )
 
 if(${TRITON_ENABLE_GPU})
   target_link_libraries(
-    triton-transformer-backend
+    triton-fastertransformer-backend
     PRIVATE
       CUDA::cudart
   )
@@ -236,38 +222,38 @@ endif() # TRITON_ENABLE_GPU
 # Install
 #
 include(GNUInstallDirs)
-set(INSTALL_CONFIGDIR ${CMAKE_INSTALL_LIBDIR}/cmake/TritonTransformerBackend)
+set(INSTALL_CONFIGDIR ${CMAKE_INSTALL_LIBDIR}/cmake/TritonFasterTransformerBackend)
 
 install(
   TARGETS
-    triton-transformer-backend
+    triton-fastertransformer-backend
   EXPORT
-    triton-transformer-backend-targets
+    triton-fastertransformer-backend-targets
   LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/backends/fastertransformer
   ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/backends/fastertransformer
 )
 
 install(
   EXPORT
-    triton-transformer-backend-targets
+    triton-fastertransformer-backend-targets
   FILE
-    TritonTransformerBackendTargets.cmake
+    TritonFasterTransformerBackendTargets.cmake
   NAMESPACE
-    TritonTransformerBackend::
+    TritonFasterTransformerBackend::
   DESTINATION
     ${INSTALL_CONFIGDIR}
 )
 
 include(CMakePackageConfigHelpers)
 configure_package_config_file(
-  ${CMAKE_CURRENT_LIST_DIR}/cmake/TritonTransformerBackendConfig.cmake.in
-  ${CMAKE_CURRENT_BINARY_DIR}/TritonTransformerBackendConfig.cmake
+  ${CMAKE_CURRENT_LIST_DIR}/cmake/TritonFasterTransformerBackendConfig.cmake.in
+  ${CMAKE_CURRENT_BINARY_DIR}/TritonFasterTransformerBackendConfig.cmake
   INSTALL_DESTINATION ${INSTALL_CONFIGDIR}
 )
 
 install(
   FILES
-  ${CMAKE_CURRENT_BINARY_DIR}/TritonTransformerBackendConfig.cmake
+  ${CMAKE_CURRENT_BINARY_DIR}/TritonFasterTransformerBackendConfig.cmake
   DESTINATION ${INSTALL_CONFIGDIR}
 )
 
@@ -275,9 +261,9 @@ install(
 # Export from build tree
 #
 export(
-  EXPORT triton-transformer-backend-targets
-  FILE ${CMAKE_CURRENT_BINARY_DIR}/TritonTransformerBackendTargets.cmake
-  NAMESPACE TritonTransformerBackend::
+  EXPORT triton-fastertransformer-backend-targets
+  FILE ${CMAKE_CURRENT_BINARY_DIR}/TritonFasterTransformerBackendTargets.cmake
+  NAMESPACE TritonFasterTransformerBackend::
 )
 
-export(PACKAGE TritonTransformerBackend)
+export(PACKAGE TritonFasterTransformerBackend)
