--- a/all_models/t5/fastertransformer/1/1-gpu/config.ini
+++ b/all_models/t5/fastertransformer/1/1-gpu/config.ini
@@ -1,12 +1,11 @@
 [encoder]
 vocab_size = 32128
-d_model = 1024
-d_kv = 128
-d_ff = 16384
-num_layers = 24
-num_decoder_layers = 24
-num_heads = 32
-relative_attention_num_buckets_or_max_pos_seq_len = 32
+d_model = 512
+d_kv = 64
+d_ff = 2048
+num_layers = 6
+num_decoder_layers = 6
+num_heads = 8
 dropout_rate = 0.1
 layer_norm_epsilon = 1e-06
 initializer_factor = 1.0
@@ -22,6 +21,7 @@ pruned_heads = {}
 tie_word_embeddings = True
 is_encoder_decoder = False
 is_decoder = False
+cross_attention_hidden_size = None
 add_cross_attention = False
 tie_encoder_decoder = False
 max_length = 20
@@ -34,6 +34,7 @@ diversity_penalty = 0.0
 temperature = 1.0
 top_k = 50
 top_p = 1.0
+typical_p = 1.0
 repetition_penalty = 1.0
 length_penalty = 1.0
 no_repeat_ngram_size = 0
@@ -59,22 +60,22 @@ sep_token_id = None
 decoder_start_token_id = 0
 task_specific_params = {'summarization': {'early_stopping': True, 'length_penalty': 2.0, 'max_length': 200, 'min_length': 30, 'no_repeat_ngram_size': 3, 'num_beams': 4, 'prefix': 'summarize: '}, 'translation_en_to_de': {'early_stopping': True, 'max_length': 300, 'num_beams': 4, 'prefix': 'translate English to German: '}, 'translation_en_to_fr': {'early_stopping': True, 'max_length': 300, 'num_beams': 4, 'prefix': 'translate English to French: '}, 'translation_en_to_ro': {'early_stopping': True, 'max_length': 300, 'num_beams': 4, 'prefix': 'translate English to Romanian: '}}
 problem_type = None
-_name_or_path = /byshiue/data/t5-models/t5-3b/
-transformers_version = 4.11.3
+_name_or_path = t5-small/
+transformers_version = 4.17.0
 model_type = t5
 n_positions = 512
 output_past = True
 weight_data_type = fp32
+relative_attention_num_buckets_or_max_pos_seq_len = 32
 
 [decoder]
 vocab_size = 32128
-d_model = 1024
-d_kv = 128
-d_ff = 16384
-num_layers = 24
-num_decoder_layers = 24
-num_heads = 32
-relative_attention_num_buckets_or_max_pos_seq_len = 32
+d_model = 512
+d_kv = 64
+d_ff = 2048
+num_layers = 6
+num_decoder_layers = 6
+num_heads = 8
 dropout_rate = 0.1
 layer_norm_epsilon = 1e-06
 initializer_factor = 1.0
@@ -90,6 +91,7 @@ pruned_heads = {}
 tie_word_embeddings = True
 is_encoder_decoder = False
 is_decoder = True
+cross_attention_hidden_size = None
 add_cross_attention = False
 tie_encoder_decoder = False
 max_length = 20
@@ -102,6 +104,7 @@ diversity_penalty = 0.0
 temperature = 1.0
 top_k = 50
 top_p = 1.0
+typical_p = 1.0
 repetition_penalty = 1.0
 length_penalty = 1.0
 no_repeat_ngram_size = 0
@@ -127,13 +130,15 @@ sep_token_id = None
 decoder_start_token_id = 0
 task_specific_params = {'summarization': {'early_stopping': True, 'length_penalty': 2.0, 'max_length': 200, 'min_length': 30, 'no_repeat_ngram_size': 3, 'num_beams': 4, 'prefix': 'summarize: '}, 'translation_en_to_de': {'early_stopping': True, 'max_length': 300, 'num_beams': 4, 'prefix': 'translate English to German: '}, 'translation_en_to_fr': {'early_stopping': True, 'max_length': 300, 'num_beams': 4, 'prefix': 'translate English to French: '}, 'translation_en_to_ro': {'early_stopping': True, 'max_length': 300, 'num_beams': 4, 'prefix': 'translate English to Romanian: '}}
 problem_type = None
-_name_or_path = /byshiue/data/t5-models/t5-3b/
-transformers_version = 4.11.3
+_name_or_path = t5-small/
+transformers_version = 4.17.0
 model_type = t5
 n_positions = 512
 output_past = True
 weight_data_type = fp32
+relative_attention_num_buckets_or_max_pos_seq_len = 32
 
 [structure]
-t5_with_bias = 0 # 0 = no bias; 1 = has bias
-position_embedding_type = 0 # 0 = relative position embedding; 1 = absolute position embedding
+t5_with_bias = 0
+position_embedding_type = 0
+
