--- a/all_models/t5/fastertransformer/1/1-gpu/config.ini
+++ b/all_models/t5/fastertransformer/1/1-gpu/config.ini
@@ -6,11 +6,14 @@ d_ff = 2048
 num_layers = 6
 num_decoder_layers = 6
 num_heads = 8
+relative_attention_max_distance = 128
 dropout_rate = 0.1
 layer_norm_epsilon = 1e-06
 initializer_factor = 1.0
 feed_forward_proj = relu
 use_cache = False
+dense_act_fn = relu
+is_gated_act = False
 return_dict = True
 output_hidden_states = False
 output_attentions = False
@@ -47,6 +50,7 @@ return_dict_in_generate = False
 forced_bos_token_id = None
 forced_eos_token_id = None
 remove_invalid_values = False
+exponential_decay_length_penalty = None
 architectures = ['T5WithLMHeadModel']
 finetuning_task = None
 id2label = {0: 'LABEL_0', 1: 'LABEL_1'}
@@ -61,7 +65,7 @@ decoder_start_token_id = 0
 task_specific_params = {'summarization': {'early_stopping': True, 'length_penalty': 2.0, 'max_length': 200, 'min_length': 30, 'no_repeat_ngram_size': 3, 'num_beams': 4, 'prefix': 'summarize: '}, 'translation_en_to_de': {'early_stopping': True, 'max_length': 300, 'num_beams': 4, 'prefix': 'translate English to German: '}, 'translation_en_to_fr': {'early_stopping': True, 'max_length': 300, 'num_beams': 4, 'prefix': 'translate English to French: '}, 'translation_en_to_ro': {'early_stopping': True, 'max_length': 300, 'num_beams': 4, 'prefix': 'translate English to Romanian: '}}
 problem_type = None
 _name_or_path = t5-small/
-transformers_version = 4.17.0
+transformers_version = 4.20.1
 model_type = t5
 n_positions = 512
 output_past = True
@@ -76,11 +80,14 @@ d_ff = 2048
 num_layers = 6
 num_decoder_layers = 6
 num_heads = 8
+relative_attention_max_distance = 128
 dropout_rate = 0.1
 layer_norm_epsilon = 1e-06
 initializer_factor = 1.0
 feed_forward_proj = relu
 use_cache = True
+dense_act_fn = relu
+is_gated_act = False
 return_dict = True
 output_hidden_states = False
 output_attentions = False
@@ -117,6 +124,7 @@ return_dict_in_generate = False
 forced_bos_token_id = None
 forced_eos_token_id = None
 remove_invalid_values = False
+exponential_decay_length_penalty = None
 architectures = ['T5WithLMHeadModel']
 finetuning_task = None
 id2label = {0: 'LABEL_0', 1: 'LABEL_1'}
@@ -131,7 +139,7 @@ decoder_start_token_id = 0
 task_specific_params = {'summarization': {'early_stopping': True, 'length_penalty': 2.0, 'max_length': 200, 'min_length': 30, 'no_repeat_ngram_size': 3, 'num_beams': 4, 'prefix': 'summarize: '}, 'translation_en_to_de': {'early_stopping': True, 'max_length': 300, 'num_beams': 4, 'prefix': 'translate English to German: '}, 'translation_en_to_fr': {'early_stopping': True, 'max_length': 300, 'num_beams': 4, 'prefix': 'translate English to French: '}, 'translation_en_to_ro': {'early_stopping': True, 'max_length': 300, 'num_beams': 4, 'prefix': 'translate English to Romanian: '}}
 problem_type = None
 _name_or_path = t5-small/
-transformers_version = 4.17.0
+transformers_version = 4.20.1
 model_type = t5
 n_positions = 512
 output_past = True
@@ -139,6 +147,7 @@ weight_data_type = fp32
 relative_attention_num_buckets_or_max_pos_seq_len = 32
 
 [structure]
-t5_with_bias = 0
-position_embedding_type = 0
+t5_with_bias = false
+use_gated_activation = false
+position_embedding_type = relative
 
