--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,7 +111,7 @@ else()
   FetchContent_Declare(
     repo-ft
     GIT_REPOSITORY https://github.com/NVIDIA/FasterTransformer.git
-    GIT_TAG v5.1
+    GIT_TAG main
     GIT_SHALLOW ON
   )
 endif()
