--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-ARG TRITON_VERSION=22.07
+ARG TRITON_VERSION=22.12
 ARG BASE_IMAGE=nvcr.io/nvidia/tritonserver:${TRITON_VERSION}-py3
 FROM ${BASE_IMAGE}
 
@@ -53,12 +53,18 @@ ARG FORCE_BACKEND_REBUILD=0
 RUN cmake \
       -D CMAKE_EXPORT_COMPILE_COMMANDS=1 \
       -D CMAKE_BUILD_TYPE=Release \
+      -D ENABLE_FP8=OFF \
       -D CMAKE_INSTALL_PREFIX=/opt/tritonserver \
       -D TRITON_COMMON_REPO_TAG="r${NVIDIA_TRITON_SERVER_VERSION}" \
       -D TRITON_CORE_REPO_TAG="r${NVIDIA_TRITON_SERVER_VERSION}" \
       -D TRITON_BACKEND_REPO_TAG="r${NVIDIA_TRITON_SERVER_VERSION}" \
       ..
-RUN make -j"$(grep -c ^processor /proc/cpuinfo)" install
+RUN cd _deps/repo-ft-src/ && \
+    git log | head -n 3 2>&1 | tee /workspace/build/fastertransformer_backend/FT_version.txt && \
+    cd /workspace/build/fastertransformer_backend/build && \
+    make -j"$(grep -c ^processor /proc/cpuinfo)" install && \
+    rm /workspace/build/fastertransformer_backend/build/bin/*_example -rf && \
+    rm /workspace/build/fastertransformer_backend/build/lib/lib*Backend.so -rf
 
 ENV NCCL_LAUNCH_MODE=GROUP
 ENV WORKSPACE /workspace
